--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,10 +27,10 @@
                 android:text="airbnb动画" />
 
             <Button
-                android:id="@+id/btn_ygx1_2"
+                android:id="@+id/btn_tabdemo"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="动画" />
+                android:text="Tab切换" />
 
             <Button
                 android:id="@+id/btn_ygx1_3"
